Fix overflow

--- a/src/styles/contact/index.scss
+++ b/src/styles/contact/index.scss
@@ -1,7 +1,7 @@
 .section--contact {
     background: #eee;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 
     &::before {
         content: '';
